# ChangeLog for dev-ruby/ruby-gettext
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.92 2012/12/22 17:04:27 ago Exp $

  22 Dec 2012; Agostino Sarubbo <ago@gentoo.org> ruby-gettext-2.3.3.ebuild:
  Add ~ppc64, wrt bug #448162

  22 Dec 2012; Agostino Sarubbo <ago@gentoo.org> ruby-gettext-2.3.3.ebuild:
  Add ~ppc, wrt bug #448162

*ruby-gettext-2.3.3 (29 Nov 2012)

  29 Nov 2012; Hans de Graaff <graaff@gentoo.org> +ruby-gettext-2.3.3.ebuild:
  Version bump. Dropped arches due to new test-unit-rr dependency.

  28 Oct 2012; Jeroen Roovers <jer@gentoo.org> ruby-gettext-2.2.1.ebuild:
  Marked ~hppa (bug #431290).

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org>
  ruby-gettext-2.1.0_p20100728-r3.ebuild, ruby-gettext-2.2.1.ebuild:
  Add ~alpha/~ia64/~sparc

  25 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
  ruby-gettext-2.2.1.ebuild:
  keyword ~ppc64, bug #431290

  16 Sep 2012; Hans de Graaff <graaff@gentoo.org>
  -ruby-gettext-2.1.0_p20100728-r1.ebuild,
  -ruby-gettext-2.1.0_p20100728-r2.ebuild, -ruby-gettext-2.2.0.ebuild:
  Cleanup.

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  ruby-gettext-2.2.1.ebuild:
  Simplify dependency style.

  22 Jul 2012; <nixnut@gentoo.org> ruby-gettext-2.1.0_p20100728-r3.ebuild:
  ppc stable #416583

  30 Jun 2012; Andreas Schuerch <nativemad@gentoo.org>
  ruby-gettext-2.1.0_p20100728-r3.ebuild:
  x86 stable, see bug 416583

*ruby-gettext-2.2.1 (28 May 2012)

  28 May 2012; Hans de Graaff <graaff@gentoo.org> +ruby-gettext-2.2.1.ebuild:
  Version bump.

*ruby-gettext-2.2.0 (27 May 2012)

  27 May 2012; Hans de Graaff <graaff@gentoo.org> +ruby-gettext-2.2.0.ebuild:
  Version bump.

  21 May 2012; Agostino Sarubbo <ago@gentoo.org>
  ruby-gettext-2.1.0_p20100728-r3.ebuild:
  Stable for amd64, wrt bug #416583

  01 May 2012; Raúl Porcel <armin76@gentoo.org>
  ruby-gettext-2.1.0_p20100728-r1.ebuild,