@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-gettext
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.92 2012/12/22 17:04:27 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.93 2012/12/22 17:05:49 ago Exp $
+
+  22 Dec 2012; Agostino Sarubbo <ago@gentoo.org> ruby-gettext-2.3.3.ebuild:
+  Add ~x86, wrt bug #448162
 
   22 Dec 2012; Agostino Sarubbo <ago@gentoo.org> ruby-gettext-2.3.3.ebuild:
   Add ~ppc64, wrt bug #448162
